--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -126,7 +126,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -300,7 +300,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -309,7 +309,7 @@
                             "<Axes: xlabel='age', ylabel='charges'>"
                         ]
                     },
-                    "execution_count": 14,
+                    "execution_count": 9,
                     "metadata": {},
                     "output_type": "execute_result"
                 },
@@ -331,7 +331,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -341,7 +341,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -350,7 +350,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -359,7 +359,7 @@
                             "(1003, 7)"
                         ]
                     },
-                    "execution_count": 22,
+                    "execution_count": 12,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -370,7 +370,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
                 {
@@ -379,7 +379,7 @@
                             "(335, 7)"
                         ]
                     },
-                    "execution_count": 23,
+                    "execution_count": 13,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -390,7 +390,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -400,7 +400,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -410,7 +410,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -426,7 +426,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 17,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -435,16 +435,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Root mean squared error (RMSE): 6107.902905789265\n",
-                        "Mean absolute error (MAE): 4155.995817851834\n",
-                        "R^2 score: 0.7481309051829794\n"
+                        "Root mean squared error (RMSE): 6103.877896127583\n",
+                        "Mean absolute error (MAE): 4191.529217717207\n",
+                        "R^2 score: 0.7389348126550891\n"
                     ]
                 }
             ],
@@ -452,6 +452,102 @@
                 "print(f\"Root mean squared error (RMSE): {root_mean_squared_error(y_true = y_train, y_pred=train_preds)}\")\n",
                 "print(f\"Mean absolute error (MAE): {mean_absolute_error(y_true = y_train, y_pred=train_preds)}\")\n",
                 "print(f\"R^2 score: {r2_score(y_true = y_train, y_pred=train_preds)}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 19,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>index</th>\n",
+                            "      <th>0</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>age</td>\n",
+                            "      <td>254.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>bmi</td>\n",
+                            "      <td>326.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>children</td>\n",
+                            "      <td>401.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>sex_male</td>\n",
+                            "      <td>20.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>smoker_yes</td>\n",
+                            "      <td>23743.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>5</th>\n",
+                            "      <td>region_northwest</td>\n",
+                            "      <td>-477.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>6</th>\n",
+                            "      <td>region_southeast</td>\n",
+                            "      <td>-1034.0</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>7</th>\n",
+                            "      <td>region_southwest</td>\n",
+                            "      <td>-1076.0</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "              index        0\n",
+                            "0               age    254.0\n",
+                            "1               bmi    326.0\n",
+                            "2          children    401.0\n",
+                            "3          sex_male     20.0\n",
+                            "4        smoker_yes  23743.0\n",
+                            "5  region_northwest   -477.0\n",
+                            "6  region_southeast  -1034.0\n",
+                            "7  region_southwest  -1076.0"
+                        ]
+                    },
+                    "execution_count": 19,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "round(pd.DataFrame( linreg_model.coef_, linreg_model.feature_names_in_).reset_index())"
             ]
         },
         {
